# horti_clj

./: .gitignore  README.md  deps.edn
.clj-kondo/.cache/v1/clj/: buddy.auth.accessrules.transit.json  buddy.auth.backends.httpbasic.transit.json  buddy.auth.backends.session.transit.json  buddy.auth.backends.token.transit.json  buddy.auth.backends.transit.json  buddy.auth.http.transit.json  buddy.auth.middleware.transit.json  buddy.auth.protocols.transit.json  buddy.auth.transit.json  buddy.core.bytes.transit.json  buddy.core.certificates.transit.json  buddy.core.codecs.base64.transit.json  buddy.core.codecs.transit.json  buddy.core.crypto.transit.json  (+371 more)
.cpcache/: 2098346094.basis  2098346094.cp  2182249211.basis  2182249211.cp  718970532.basis  718970532.cp  718970532.manifest
horti-ui/: jest.config.js  package-lock.json  package.json
horti-ui/coverage/: clover.xml  coverage-final.json  lcov.info
horti-ui/coverage/lcov-report/: index.html
horti-ui/public/: index.html  manifest.json
horti-ui/src/: App.js  App.test.js  index.js  setupTests.js  test-utils.js
horti-ui/src/__mocks__/: react-router-dom.js
horti-ui/src/components/: CanvasManager.js  Dashboard.js  GardenCanvas.js  GardenLogs.js  GardenManager.js  Login.js  MetricsViewer.js  PlantEditModal.js  PlantList.js
horti-ui/src/contexts/: UserContext.js
src/horti/: core.clj  db.clj  http_resp.clj  jwt.clj  system.clj
test/horti/: api_test.clj  canvas_test.clj  db_test.clj  http_resp_test.clj  jwt_test.clj  plant_edit_test.clj  test_utils.clj
~/dev/3d/vulkan_renderer/: Cargo.toml
(+1062 files in other folders)
